Added Index and Headshot

--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
     <head>
       <title>Darshan Patel</title>
         <meta charset="utf-8">
-        <meta name="author"
-     
+        <meta name="author" content="Darshan Patel">  
     </head>
     <body>
-
+      <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg">
 
 
     </body>
