added index and headshot

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Darshan Patel">  
     </head>
     <body>
-      <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg">
+      <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg" akt="Darshan Patel Headshot">
 
 
     </body>
