Added body content

--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
         <meta name="author" content="Darshan Patel">  
     </head>
     <body>
-      <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg" akt="Darshan Patel Headshot">
+        <div class=""banner">
+          <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg" akt="Darshan Patel Headshot">
+        </div>
 
+        <div class="name">
+          Darshan Patel
+        </div>
 
+        <div class+"social-icons"></div>
     </body>
 
 
