added twitter icon

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
           Darshan Patel
         </div>
 
-        <div class+"social-icons"></div>
+        <div class="social-icons">
+          <a href="<i class="fa-brands fa-twitter"></i>
+        </div>
     </body>
 
 
