--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="author" content="Darshan Patel">  
     </head>
     <body>
-        <div class=""banner">
+        <div class="banner">
           <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg" akt="Darshan Patel Headshot">
         </div>
 
@@ -15,7 +15,7 @@
         </div>
 
         <div class="social-icons">
-          <a href="<i class="fa-brands fa-twitter"></i>
+          <a href= <i class="fa-brands fa-twitter"></i>
         </div>
     </body>
 
