--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div class="banner">
-          <img scr="/workspaces/links/thumbnails/Darshan_Patel_ Headshot.jpg" akt="Darshan Patel Headshot">
+          <img scr="/workspaces/links/thumbnails/darshan_patel_headshot.jpg" akt="Darshan Patel Headshot">
         </div>
 
         <div class="name">
