added three links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
         </div>
 
         <div class="social-icons">
-          <a href= <i class="fa-brands fa-twitter"></i>
+          <a href="https://www.linkedin.com/in/darshan-patel-md-86a44b7b/" target="_blank">
+            LinkedIN
+           </a>
+           
+           <a href="https://aayuwell.com/weightlossprogram/" target="_blank">
+            Weight Loss
+           </a>
+
+           <a href="https://aayuwell.com/weightloss-mentalhealth-program/" target="_blank">
+           Mental Health
+            </a>
         </div>
     </body>
 
